fix: badge alignment

--- a/less/groups.less
+++ b/less/groups.less
@@ -1,7 +1,7 @@
 .group-label {
 	display: inline-block;
 	text-transform: uppercase;
-	vertical-align: middle;
+	vertical-align: -5px;
 	padding: 4px;
 	border-radius: 2px;
 	max-width: 150px;
